style books_area

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 /*Carousel*/
-/*@media screen and (max-width: 767px) {
-  .banner img {
-    
-}*/
+@media screen and (max-width: 767px) {
+  
+}
+
