carouselbooks and cardsbooks

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.color-red {
+  background-color: #D90416;
+
+}
+
 /*Carousel*/
 @media screen and (max-width: 767px) {
   
@@ -17,4 +22,9 @@
     width: 13em;
   }
 }
-
+/*BookCard*/
+.book-div h5 {
+ overflow: hidden;
+ white-space: nowrap;
+ text-overflow: ellipsis;
+}
