--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,13 @@
 .color-red {
   background-color: #D90416;
 }
+
 /*Home*/
+.nav-link {
+  
+  font-size: 1.1em;
+}
+
 .home-title {
   font-weight: bolder;
   color:#D90416;
